; ModuleID = '/home/carl/AnghaBench/linux/arch/mips/pci/extr_pci-virtio-guest.c_pci_virtio_guest_write_config.c'
source_filename = "/home/carl/AnghaBench/linux/arch/mips/pci/extr_pci-virtio-guest.c_pci_virtio_guest_write_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pci_bus = type { i32 }

@PCI_CONFIG_DATA = common dso_local global i32 0, align 4
@PCIBIOS_SUCCESSFUL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pci_bus*, i32, i32, i32, i32)* @pci_virtio_guest_write_config to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pci_virtio_guest_write_config(%struct.pci_bus* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.pci_bus*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.pci_bus* %0, %struct.pci_bus** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %11 = load %struct.pci_bus*, %struct.pci_bus** %6, align 8
  %12 = load i32, i32* %7, align 4
  %13 = load i32, i32* %8, align 4
  %14 = call i32 @pci_virtio_guest_write_config_addr(%struct.pci_bus* %11, i32 %12, i32 %13)
  %15 = load i32, i32* %9, align 4
  switch i32 %15, label %34 [
    i32 1, label %16
    i32 2, label %23
    i32 4, label %30
  ]

16:                                               ; preds = %5
  %17 = load i32, i32* %10, align 4
  %18 = load i32, i32* @PCI_CONFIG_DATA, align 4
  %19 = load i32, i32* %8, align 4
  %20 = and i32 %19, 3
  %21 = add nsw i32 %18, %20
  %22 = call i32 @outb(i32 %17, i32 %21)
  br label %34

23:                                               ; preds = %5
  %24 = load i32, i32* %10, align 4
  %25 = load i32, i32* @PCI_CONFIG_DATA, align 4
  %26 = load i32, i32* %8, align 4
  %27 = and i32 %26, 2
  %28 = add nsw i32 %25, %27
  %29 = call i32 @outw(i32 %24, i32 %28)
  br label %34

30:                                               ; preds = %5
  %31 = load i32, i32* %10, align 4
  %32 = load i32, i32* @PCI_CONFIG_DATA, align 4
  %33 = call i32 @outl(i32 %31, i32 %32)
  br label %34

34:                                               ; preds = %5, %30, %23, %16
  %35 = load i32, i32* @PCIBIOS_SUCCESSFUL, align 4
  ret i32 %35
}

declare dso_local i32 @pci_virtio_guest_write_config_addr(%struct.pci_bus*, i32, i32) #1

declare dso_local i32 @outb(i32, i32) #1

declare dso_local i32 @outw(i32, i32) #1

declare dso_local i32 @outl(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
